# nauti_yolo

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: parameters.yaml
launch/: yolo_detector.launch
msg/: BoundingBox.msg  TargetObservation.msg
scripts/: main.py
scripts/YOLODetector/: yolo_detector.py
